Fix the body overflow

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -34,6 +34,7 @@ small a {
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
